public/stylesheets/sass/_publication_common.sass
h3
  text-align: center

span.flickr_image_title
  font-family: 'Cabin', serif
  font-size: 12px
  font-style: normal
  font-weight: 400
  text-shadow: none
  text-decoration: none
  text-transform: none
  letter-spacing: 0em
  word-spacing: 0em
  line-height: 1.2

a.owner
  @extend span.flickr_image_title
  text-decoration: none

.page_a4
  margin: 0px auto
  width: 794px
  height: 1123px
  padding: 0px
  background-color: #fff
  position: relative

.page_letter
  margin: 0px auto
  width: 950px
  height: 1230px
  padding: 0px
  background-color: #fff
  position: relative

.text_element
  padding: 0px
  margin: 0px
  font-family: 'Lato', serif
  font-size: 14px
  font-style: normal
  font-weight: 400
  text-shadow: none
  text-decoration: none
  text-transform: none
  letter-spacing: 0em
  word-spacing: 0em
  line-height: 1.2
/* Set this once the editor is more WYSIWYG
/*   overflow: hidden

.twitter_element
  font-family: 'Yanone Kaffeesatz', serif
  font-size: 14px
  font-style: normal
  font-weight: 400
  text-shadow: none
  text-decoration: none
  text-transform: none
  letter-spacing: 0.089em
  word-spacing: 0.180em
  line-height: 1.2

.twitter_element_highlight
  :color #01e
  font-style: italic

.link_element
  a
    @extend .text_element
    :text-decoration none

